--- a/arch/arm/configs/tam3517_defconfig
+++ b/arch/arm/configs/tam3517_defconfig
@@ -806,8 +806,8 @@ CONFIG_ETHERNET=y
 # CONFIG_ETHOC is not set
 # CONFIG_NET_VENDOR_SEEQ is not set
 CONFIG_NET_VENDOR_SMSC=y
-CONFIG_SMC91X=m
-CONFIG_SMC911X=m
+# CONFIG_SMC91X is not set
+# CONFIG_SMC911X is not set
 CONFIG_SMSC911X=y
 # CONFIG_SMSC911X_ARCH_HOOKS is not set
 # CONFIG_NET_VENDOR_STMICRO is not set
