--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -508,6 +508,13 @@ config USB_SWITCH_FSA9480
 	  stereo and mono audio, video, microphone and UART data to use
 	  a common connector port.
 
+config OMAP3_PWM
+	tristate "OMAP3 PWM driver"
+	depends on SND_OMAP_SOC && SC_HD1U_TAM3517_BASEBOARD
+	help
+	  Implements a driver to test the PWM outputs of an OMAP3 based Linux 
+	  	system from userspace.
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
