--- a/arch/arm/boot/dts/imx6qdl-var-som.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-var-som.dtsi
@@ -702,16 +702,22 @@
 		reg = <0x00200000 0x00200000>;
 	};
 
-	/* an 8 MiB partition */
+	/* an 150 MiB partition */
 	partition@2 {
-		label = "kernel";
-		reg = <0x00400000 0x00800000>;
+		label = "kernel1";
+		reg = <0x00400000 0x09600000>;
 	};
 
-	/* a 1012 MiB partition */
+	/* an 150 MiB partition */
 	partition@3 {
+		label = "kernel2";
+		reg = <0x09a00000 0x09600000>;
+	};
+
+	/* a 208 MiB partition */
+	partition@4 {
 		label = "rootfs";
-		reg = <0x00c00000 0x3f400000>;
+		reg = <0x13000000 0x0d000000>;
 	};
 };
 
