--- a/arch/arm/configs/snapcap_defconfig
+++ b/arch/arm/configs/snapcap_defconfig
@@ -162,11 +162,7 @@ CONFIG_MICREL_PHY=y
 CONFIG_PPP=m
 CONFIG_PPP_FILTER=y
 CONFIG_PPP_ASYNC=m
-CONFIG_USB_PEGASUS=m
-CONFIG_USB_RTL8150=m
-CONFIG_USB_RTL8152=m
-CONFIG_USB_USBNET=m
-CONFIG_USB_NET_CDC_EEM=m
+# CONFIG_USB_NET_DRIVERS is not set
 CONFIG_WL_TI=y
 CONFIG_WL18XX=m
 CONFIG_WLCORE_SDIO=m
