--- a/arch/arm/boot/dts/imx6qdl-var-som.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-var-som.dtsi
@@ -702,22 +702,22 @@
 		reg = <0x00200000 0x00200000>;
 	};
 
-	/* an 150 MiB partition */
+	/* an 100 MiB partition */
 	partition@2 {
 		label = "kernel1";
-		reg = <0x00400000 0x09600000>;
+		reg = <0x00400000 0x6400000>;
 	};
 
 	/* an 150 MiB partition */
 	partition@3 {
 		label = "kernel2";
-		reg = <0x09a00000 0x09600000>;
+		reg = <0x6800000 0x6400000>;
 	};
 
-	/* a 208 MiB partition */
+	/* a 308 MiB partition */
 	partition@4 {
 		label = "data";
-		reg = <0x13000000 0x0d000000>;
+		reg = <0xcc00000 0x0d000000>;
 	};
 };
 
