Forgot to update the size of the data partition correctly

--- a/arch/arm/boot/dts/imx6qdl-var-som.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-var-som.dtsi
@@ -717,7 +717,7 @@
 	/* a 308 MiB partition */
 	partition@4 {
 		label = "data";
-		reg = <0xcc00000 0x0d000000>;
+		reg = <0xcc00000 0x13400000>;
 	};
 };
 
